--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,23 +1,5 @@
 @use 'br';
 
-.grid {
-  display: grid;
-  grid-gap: 1em;
-  grid-template-columns: 150px auto 150px;
-}
-
-header,
-footer {
-  grid-column: 1 / 4;
-}
-
-aside,
-article {
-  @include br.small {
-    grid-column: 1 / 4;
-  }
-}
-
 /* Demo Specific Styles */
 body {
   margin: 0 auto;
@@ -25,13 +7,32 @@ body {
   padding: 1em 0;
 }
 
-header,
-aside,
-article,
-footer {
-  background: #eaeaea;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 25vh;
+.grid {
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: 150px auto 150px;
+
+  header,
+  footer {
+    grid-column: 1 / 4;
+  }
+
+  aside,
+  article {
+    @include br.small {
+      grid-column: 1 / 4;
+    }
+  }
+
+  header,
+  aside,
+  article,
+  footer {
+    background: #eaeaea;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100px;
+    height: 25vh;
+  }
 }
